# TuitionTruth-2.0

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json  tuition-tracker-linear-backlog.md  tuition-tracker-scoping-analysis.md  turbo.json
.github/workflows/: ci.yml
apps/pipeline/: README.md  pyproject.toml
apps/pipeline/src/tuitiontruth_pipeline/: __init__.py  canonical.py  logging_config.py  ratelimit.py  settings.py
apps/pipeline/src/tuitiontruth_pipeline/cache/: __init__.py  base.py  memory.py  redis_cache.py
apps/pipeline/src/tuitiontruth_pipeline/db/: __init__.py  repository.py
apps/pipeline/src/tuitiontruth_pipeline/etl/: __init__.py  normalize.py
apps/pipeline/src/tuitiontruth_pipeline/orchestration/: __init__.py  errors.py  jobs.py
apps/pipeline/src/tuitiontruth_pipeline/quality/: __init__.py  diffing.py  review_queue.py
apps/pipeline/src/tuitiontruth_pipeline/scrapers/: __init__.py  config.py  framework.py  robots.py
apps/pipeline/src/tuitiontruth_pipeline/scrapers/configs/: example-community-college.yaml  example-state-university.yaml  example-tech-institute.yaml
apps/pipeline/src/tuitiontruth_pipeline/sources/: __init__.py  ipeds.py  scorecard.py
apps/pipeline/tests/: test_cache.py  test_diffing.py  test_errors.py  test_ipeds.py  test_normalize.py  test_orchestration.py  test_ratelimit.py  test_review_queue.py  test_scorecard.py  test_scraper_config.py  test_scraper_framework.py
apps/web/: eslint.config.mjs  load-env.ts  next.config.ts  (+4 more)
docs/: BUILD_PLAN.md  data-dictionary.md
(+46 files in other folders)
