[project]
name = "tuitiontruth-pipeline"
version = "0.0.0"
description = "Data ingestion service for TuitionTruth 2.0 (Scorecard / IPEDS / scrapers / ETL)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "lxml>=5.3.0",
    "cssselect>=1.2.0",
    "pyyaml>=6.0.2",
    "psycopg[binary]>=3.2.3",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "types-pyyaml>=6.0.12",
    "lxml-stubs>=0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuitiontruth_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# TCH (flake8-type-checking) is intentionally omitted: this codebase uses
# `from __future__ import annotations` everywhere and relies on pydantic, which
# needs annotation types (Decimal, date, Literal) importable at runtime to build
# its validators. Moving them into TYPE_CHECKING blocks would break validation.
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["cssselect.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
